# iBeaconFinder

./: .gitignore  CMakeLists.txt  README.md  dconfig
curses/: main.c
db/: beacons.dir  beacons.pag  db.c  main.c  ndbm.c
include/: dbstuff.h  http_.h
server/: .gitignore  CMakeLists.txt  server.c
server/html/: index.html
server/include/: common.h  dbstuff.h  http_.h
server/src/: CMakeLists.txt  db.c  http.c  http_request.c  http_response.c  main.c
src/: CMakeLists.txt  common.c  cursesClient.c  db.c  http_request.c  http_response.c  iBeaconServer.c
testClient/: CMakeLists.txt  fsm_client.c  main.c  makefile  tester
testClient/include/: common.h  http_.h
testClient/src/: CMakeLists.txt  http_request.c  http_response.c  main.c
tests/: dbTesting.c
